# mtg-engine

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/ability/: mod.rs
src/card/: mod.rs
src/combat/: mod.rs
src/data/: decklists.rs  mod.rs  scryfall.rs
src/effect/: mod.rs
src/game/: game_loop.rs  mod.rs  state.rs  turns.rs
src/mana/: mod.rs
src/player/: mod.rs
src/stack/: mod.rs
src/ui/: mod.rs
src/zone/: mod.rs
