[package]
name = "mtg-engine"
version = "0.1.0"
edition = "2021"
authors = ["tjonestj3"]
description = "A Magic: The Gathering rules engine and simulator for Modern format"
keywords = ["mtg", "magic", "card-game", "simulator"]
categories = ["games"]

[[bin]]
name = "mtg"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
